<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/user" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/requestBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/request"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/accept" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_weight="4"
        android:background="@drawable/grid"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.85"
            android:orientation="horizontal"
            android:weightSum="10">


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="2" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="3" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.85"
            android:orientation="horizontal"
            android:weightSum="10">


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="4" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="5" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="6" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="10">


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="7" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="8" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3.1"
                android:padding="15dp"
                android:tag="9" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>